Mon dernier  commit

--- a/index.html
+++ b/index.html
@@ -163,16 +163,8 @@
                 <a href="https://github.com/youcy123"><i class="fab fa-github"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
             </div>
-            <p id="last-update">Dernière mise à jour le </p>
-        </footer>   
-        <!-- mettre a jour la date actuelle  -->
-<script>
-    const lastUpdateElement = document.getElementById("last-update");
-    const currentDate = new Date();
-    const options = { year: 'numeric', month: 'long', day: 'numeric' };
-    const formattedDate = currentDate.toLocaleDateString('fr-FR', options);
-    lastUpdateElement.textContent += formattedDate + ".";
-</script>     
+            <p id="last-update">Dernière mise à jour le 10 septembre 2024</p>
+        </footer>      
     </div>
 </body>
 </html>
