Mon dernier  commit

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <a href="https://github.com/youcy123"><i class="fab fa-github"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
             </div>
-            <p id="last-update">Dernière mise à jour le 10 septembre 2024</p>
+            <p>Dernière mise à jour le 10 septembre 2024</p>
         </footer>      
     </div>
 </body>
